# nipy

./: .appveyor.yml  .bzrignore  .coveragerc  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  AUTHOR  CONTRIBUTING.md  Changelog  INSTALL  LICENSE  MANIFEST.in  Makefile  README  README.rst  THANKS  TODO.txt  bench.ini  build_docs.py  build_helpers.py  dev-requirements.txt  dmtx_0.npz  dmtx_1.npz  doc-requirements.txt  documentation.html  fff2.py  fmri_run0.nii  fmri_run1.nii  genindex.html  glossary.html  history.html  index.html  license.html  mask.nii  meson.build  mission.html  objects.inv  publications.html  (+12 more)
nipy/: COMMIT_INFO.txt  __init__.py  conftest.py  info.py  labs.py  meson.build  pkg_info.py  setup.py  version.py
nipy/_build_utils/: cythoner.py  gcc_build_bitness.py
nipy/algorithms/: __init__.py  fwhm.py  interpolation.py  kernel_smooth.py  meson.build  nipy_reg.py  onesample.py  optimize.py  resample.py  setup.py
nipy/algorithms/clustering/: __init__.py  bgmm.py  clustering.py  ggmixture.py  gmm.py  hierarchical_clustering.py  imm.py  meson.build  setup.py  utils.py  von_mises_fisher_mixture.py
nipy/algorithms/diagnostics/: __init__.py  commands.py  screens.py  setup.py  timediff.py  tsdiffana.py  tsdiffplot.py
nipy/algorithms/graph/: __init__.py  _graph.c  _graph.pyx  bipartite_graph.py  field.py  forest.py  graph.py  meson.build  setup.py
nipy/algorithms/group/: __init__.py  parcel_analysis.py  setup.py
nipy/algorithms/permutation_test/: __init__.py  _permutations.c  _permutations.pyx  permutations.c  permutations.h  setup.py
nipy/algorithms/registration/: NOTES_ELF  TODO.txt  __init__.py  _cubic_spline.c  _cubic_spline.pyx  _registration.c  _registration.h  _registration.pyx  affine.py  c_bindings.c  c_bindings.pyx  chain_transform.py  constants.py  cubic_spline.c  cubic_spline.h  grid_transform.py  groupwise_registration.py  histogram_registration.py  image_utils.py  joint_histogram.c  joint_histogram.h  meson.build  optimizer.py  polyaffine.c  polyaffine.h  polyaffine.py  resample.py  scripting.py  setup.py  similarity_measures.py  spline_transform.py  transform.py  type_check.py  wichmann_prng.c  wichmann_prng.h
nipy/algorithms/routines/: setup.py
nipy/algorithms/segmentation/: __init__.py  _mrf.c  _mrf.pyx  _segmentation.c  _segmentation.h  _segmentation.pyx  brain_segmentation.py  c_bindings.c  c_bindings.pyx  meson.build  mrf.c  mrf.h  segmentation.py  setup.py  vem.py
nipy/algorithms/slicetiming/: __init__.py  setup.py  timefuncs.py
nipy/algorithms/spatial_models/: __init__.py  bayesian_structural_analysis.py  discrete_domain.py  hierarchical_parcellation.py  hroi.py  mroi.py  parcel_io.py  setup.py  structural_bfls.py
nipy/algorithms/statistics/: __init__.py  _quantile.c  _quantile.pyx  api.py  bayesian_mixed_effects.py  classification.py  empirical_pvalue.py  histogram.c  histogram.pyx  intrinsic_volumes.py  intvol.c  intvol.pyx  meson.build  mixed_effects.py  mixed_effects_stat.py  nlsmodel.py  onesample.py  quantile.c  quantile.h  regression.py  rft.py  setup.py  spatial_stat.py  utils.py
nipy/algorithms/tests/: test_interpolator.py  test_kernel_smooth.py  test_mask.py  test_onesample.py  test_resample.py
nipy/algorithms/utils/: affines.py  fast_distance.py  matrices.py  pca.py  reproducibility_measures.py  setup.py  simul_multisubject_fmri_dataset.py
nipy/cli/: __init__.py  diagnose.py  img3dto4d.py  img4dto3d.py  realign4d.py  setup.py  tsdiffana.py
nipy/core/: __init__.py  api.py  setup.py
nipy/core-protected/: setup.py
nipy/core-protected/image/: __init__.py
nipy/core-protected/reference/: coordinate_map.py  coordinate_system.py  matrix_groups.py  setup.py
nipy/core/image/: __init__.py  affine_image.py  affine_imageII.py  base_image.py  data_image.py  generators.py  image.py  image_list.py  image_spaces.py  lpi_image.py  roi.py  setup.py  xyz_image.py
nipy/core/reference/: __init__.py  array_coords.py  coordinate_map.py  coordinate_system.py  matrix_groups.py  setup.py  slices.py  spaces.py
nipy/core/transforms/: affine_utils.py  affines.py  transform.py
nipy/core/utils/: __init__.py  generators.py  setup.py
nipy/datasets/: __init__.py
nipy/datasets/image/: image_list.py  volume_image.py  warped_image.py
nipy/datasets/transforms/: affine_transform.py  affine_utils.py  transform.py
nipy/datasets/volumes/: data_image.py  setup.py  volume_data.py  volume_field.py  volume_grid.py  volume_image.py  volume_img.py  warped_image.py
nipy/fixes/: README.txt  __init__.py  setup.py
nipy/fixes/nibabel/: __init__.py  orientations.py
nipy/fixes/scipy/: __init__.py  setup.py
nipy/interfaces/: __init__.py  matlab.py  setup.py  spm.py
nipy/interfaces/tests/: __init__.py  test_mlabtemp.py
nipy/io/: __init__.py  api.py  datasource.py  files.py  nibcompat.py  nifti_ref.py  pyniftiio.py  setup.py
nipy/io/imageformats/: __init__.py  analyze.py  batteryrunners.py  binaryheaders.py  compat.py  eulerangles.py  filename_parser.py  funcs.py  header_ufuncs.py  images.py  loadsave.py  minc.py  nifti1.py  orientations.py  quaternions.py  setup.py  spatialimages.py  spm2analyze.py  spm99analyze.py  volumeutils.py
nipy/io/tests/: __init__.py  test_coerce2nifti.py  test_image_io.py  test_nibcompat.py  (+4 more)
nipy/labs/: README.txt  __init__.py  bindings.py  conftest.py  glm.py  group.py  mask.py  meson.build  setup.py  statistical_mapping.py  viz.py  viz3d.py
nipy/modalities/: __init__.py  setup.py
nipy/neurospin/: README.txt  __init__.py  image.py  image_conversion.py  image_registration.py  mask.py  setup.py  statistical_mapping.py  viz.py  viz3d.py
nipy/testing/: __init__.py  _paramtestpy2.py  data.py  decorators.py  doctester.py  nitest.py  nosetester.py  setup.py
nipy/tests/: __init__.py  scriptrunner.py  test_scripts.py
nipy/utils/: __init__.py  arrays.py  compat3.py  data.py  data_files.py  environment.py  get_data.py  odict.py  onetime.py  optpkg.py  perlpie.py  setup.py  skip_test.py  tmpdirs.py  utilities.py
nipy/viz/: __init__.py  montages.py  setup.py  viz.py
(+2593 files in other folders)
